--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,18 @@ img {
   width: 100%;
 }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+  color: var(--color-highlight);
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: var(--color-light);
@@ -22,18 +34,41 @@ body {
 
 .container {
   margin: 0 auto;
+  max-width: 900px;
 }
 
 .nav {
   display: flex;
   flex-direction: column;
   gap: 0.5em;
-  border: solid red 1px;
+  margin: 2em auto;
+  max-width: 900px;
 }
 
 .nav__button {
+  font-weight: 800;
+  font-size: 1.25rem;
+  background-color: var(--color-main);
+  color: var(--color-light);
   border: none;
-  border-radius: 2em;
+  border-radius: 8px;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0.5em;
+  cursor: pointer;
+}
+
+.nav__button.selected {
+  background-color: var(--color-dark);
+  color: var(--color-highlight);
+}
+
+.nav__button:hover {
+  opacity: 0.75;
+}
+
+.hero {
+  text-align: center;
 }
 
 .hero__image {
@@ -45,12 +80,60 @@ body {
 
 .hero__heading {
   position: absolute;
-  top: 60%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: var(--color-highlight);
 }
 
-.hero {
+.menu {
+  text-align: left;
+}
+
+.menu__card {
+  background-color: var(--color-main);
+  color: var(--color-dark);
+  border: solid var(--color-highlight);
+  border-radius: 8px;
+  max-width: 85%;
+  margin: 0 auto 1em auto;
+  padding: 1em;
+}
+
+.menu__heading {
+  border-bottom: solid var(--color-highlight) 1px;
+  margin-bottom: 0.5em;
+}
+
+.menu__cost {
+  text-align: right;
+  color: var(--color-highlight);
+  font-size: 1.2rem;
+}
+
+.about__heading {
   text-align: center;
+  margin-bottom: 1em;
+}
+
+.about__text {
+  font-style: italic;
+  line-height: 1.5em;
+  max-width: 85%;
+  margin: 0 auto;
+  border: solid var(--color-dark);
+  border-radius: 8px;
+  padding: 1em;
+  background-color: var(--color-main);
+  color: var(--color-dark);
+}
+
+span.highlight {
+  color: var(--color-highlight);
+}
+
+@media (min-width: 600px) {
+  .nav {
+    flex-direction: row;
+  }
 }
